# tdmd_Claude

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml  format.yml  verifylab.yml
benchmarks/: CMakeLists.txt  README.md
benchmarks/fcc16/: README.md
benchmarks/nicocr/: README.md
benchmarks/phase1_baseline/: CHECKLIST.md  CMakeLists.txt  HOW_TO_READ_TRACES.md  README.md  bench_pipeline_scheduler.cu  generate_data.sh  medium.data  run_lammps_baseline.sh  run_tdmd_profiled.sh  small.data  tiny.data  validate_inputs.py
benchmarks/phase1_baseline/lammps_ab_phase_c/: README.md  eam_medium.in  eam_small.in  eam_tiny.in  morse_medium.in  morse_small.in  morse_tiny.in  parse_results.py  run_ab_sweep.sh
benchmarks/phase1_baseline/lammps_ab_phase_c/results_20260411_014944/: lammps_eam_medium_run1.stdout  lammps_eam_medium_run2.stdout  lammps_eam_medium_run3.stdout  lammps_eam_small_run1.stdout  lammps_eam_small_run2.stdout  lammps_eam_small_run3.stdout  lammps_eam_tiny_run1.stdout  lammps_eam_tiny_run2.stdout  lammps_eam_tiny_run3.stdout  lammps_morse_medium_run1.stdout  lammps_morse_medium_run2.stdout  lammps_morse_medium_run3.stdout  lammps_morse_small_run1.stdout  lammps_morse_small_run2.stdout  lammps_morse_small_run3.stdout  lammps_morse_tiny_run1.stdout  lammps_morse_tiny_run2.stdout  lammps_morse_tiny_run3.stdout  tdmd_eam_medium_run1.json  tdmd_eam_medium_run1.stdout  tdmd_eam_medium_run2.json  tdmd_eam_medium_run2.stdout  tdmd_eam_medium_run3.json  tdmd_eam_medium_run3.stdout  tdmd_eam_small_run1.json  tdmd_eam_small_run1.stdout  tdmd_eam_small_run2.json  tdmd_eam_small_run2.stdout  tdmd_eam_small_run3.json  tdmd_eam_small_run3.stdout  tdmd_eam_tiny_run1.json  tdmd_eam_tiny_run1.stdout  tdmd_eam_tiny_run2.json  tdmd_eam_tiny_run2.stdout  tdmd_eam_tiny_run3.json  tdmd_eam_tiny_run3.stdout  tdmd_morse_medium_run1.json  tdmd_morse_medium_run1.stdout  tdmd_morse_medium_run2.json  tdmd_morse_medium_run2.stdout  (+14 more)
benchmarks/phase1_baseline/lammps_medium/: in.baseline
benchmarks/phase1_baseline/lammps_small/: in.baseline
benchmarks/phase1_baseline/lammps_small/results_20260408_195555/: lammps.stdout  nsys.stdout  trace.sqlite
benchmarks/single_gpu_vs_lammps/: README.md
cmake/: CUDAConfig.cmake  CompilerFlags.cmake
docs/: 00-vision.md  README.md
docs/01-theory/: dissertation-source.md  integrator.md  invariants.md  neighbor-lists.md  potentials.md  time-decomposition.md  zone-state-machine.md
docs/02-architecture/: data-structures.md  gpu-strategy.md  lammps-compatibility.md  modules.md  overview.md  parallel-model.md  scheduler.md  verifylab.md
docs/03-roadmap/: current_milestone.md  milestones.md
docs/04-development/: build-and-run.md  ci-strategy.md  code-style.md  debugging.md  documentation-rules.md  git-workflow.md  lessons-learned.md  test-suite-design-research.md  testing-strategy.md
docs/05-benchmarks/: README.md  fcc16-spec.md  feat-eam-pipeline-results.md  lammps-ab-results.md  lammps-baseline.md  metrics.md  opt-session-results.md  phase2-batched-scheduler-results.md
docs/06-decisions/: 0001-cpp20-cuda.md  0002-standalone-primary.md  0003-lammps-data-format.md  0004-verifylab-separate.md  0005-batched-force-kernels.md  0006-distributed-scaffold-honesty.md  0007-precision-contract.md  0008-copy-lammps-where-applicable.md  0009-typed-vec3-roles.md  0010-reduction-determinism-contract.md  template.md
prompts/: README.md
prompts/roles/: architect.md  (+7 more)
scripts/: build.sh  format.sh  run-tests.sh  run-verifylab.sh  status.sh
src/: CMakeLists.txt
src/comm/: CMakeLists.txt  mpi_ring_comm.cpp  mpi_ring_comm.hpp
src/core/: CMakeLists.txt  box.hpp  constants.hpp  determinism.hpp  device_buffer.cuh  device_math.cuh  device_system_state.cu  device_system_state.cuh  error.hpp  log.hpp  math.hpp  mpi_types.hpp  system_state.hpp  types.hpp
src/domain/: CMakeLists.txt  cell_list.cpp  cell_list.hpp  device_cell_list.cu  device_cell_list.cuh  spatial_decomp.cpp  spatial_decomp.hpp  zone_partition.cpp  zone_partition.hpp
src/drivers/: CMakeLists.txt  tdmd_main.cpp
src/integrator/: CMakeLists.txt  device_nose_hoover.cu  device_nose_hoover.cuh  device_velocity_verlet.cu  device_velocity_verlet.cuh  device_velocity_verlet_zone.cu  device_velocity_verlet_zone.cuh  velocity_verlet.cpp  velocity_verlet.hpp
src/io/: CMakeLists.txt  dump_reader.cpp  dump_reader.hpp  lammps_data_reader.cpp  lammps_data_reader.hpp
src/neighbors/: CMakeLists.txt  device_neighbor_list.cu  device_neighbor_list.cuh  neighbor_list.cpp  neighbor_list.hpp
src/potentials/: CMakeLists.txt  device_eam.cu  device_eam.cuh  device_morse.cu  device_morse.cuh  device_morse_zone.cu  device_morse_zone.cuh  eam_alloy.cpp  eam_alloy.hpp  force_compute.cpp  force_compute.hpp  ipair.hpp  morse.hpp
src/scheduler/: CMakeLists.txt  distributed_pipeline_scheduler.cu  distributed_pipeline_scheduler.cuh  fast_pipeline_scheduler.cu  fast_pipeline_scheduler.cuh  hybrid_pipeline_scheduler.cu  hybrid_pipeline_scheduler.cuh  pipeline_scheduler.cu  pipeline_scheduler.cuh  sequential_scheduler.cpp  sequential_scheduler.hpp  stream_pool.cu  stream_pool.cuh  zone.hpp
tests/: CMakeLists.txt
tests/data/: 4atoms.data  cu_fcc_32.data
tests/support/: precision_tolerance.hpp
tests/unit/: test_cell_list.cpp  test_device_buffer.cu  test_device_cell_list.cu  test_device_eam.cu  test_device_lammps_ab.cu  test_device_morse.cu  test_device_neighbor_list.cu  test_device_nve_drift.cu  test_distributed_pipeline.cu  test_eam.cpp  test_fast_pipeline.cu  test_fast_pipeline_eam.cu  test_hybrid_pipeline.cu  test_lammps_ab.cpp  test_lammps_data_reader.cpp  test_math.cpp  test_morse.cpp  test_neighbor_list.cpp  test_nve_drift.cpp  test_nvt_thermostat.cu  test_pipeline_scheduler.cu  test_sequential_scheduler.cpp  test_smoke.cpp  test_sum_order_sensitivity.cu  test_velocity_verlet.cpp  test_zone_partition.cpp  test_zone_state_machine.cpp
tools/: gen_fcc_data.py
verifylab/: README.md
(+83 files in other folders)
